# javelin

./: .gitignore  package.py  pyproject.toml
icons/: icons.qrc
src/javelin/: __init__.py  auth.py  project.py  publish.py  publishing.py  shotgun_connection.py  templates.py  utils.py
src/javelin/nuke/: controller.py  menu.py
src/javelin/ui/: controller.py  database.py  icon_resources.py  login.py  promise.py  utils.py
src/javelin/ui/launcher/: __main__.py  main.py  projects.py  publishes.py  shared.py  shots.py  tasks.py  workfiles.py
src/javelin/ui/nuke/: controller.py  menu.py
src/javelin/ui/panel/: explorer.py  file_open.py  loader.py  main.py  projects.py  publishes.py  shared.py  shots.py  tasks.py  workfiles.py
